--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start Quiz button -->
+<style>
+    body {
+        background-image: url('https://www.lighthouselabs.ca/uploads/post/open_graph_image/459/Coding-vs-programming.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>    <!-- start Quiz button -->
     <div class="start_btn"><button>Start Quiz</button></div>
     <!-- Info Box -->
     <div class="info_box">
