i think im done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     }
 </style>    <!-- start Quiz button -->
     <div class="start_btn"><button>Start Quiz</button></div>
+    <input class="text">
     <!-- Info Box -->
     <div class="info_box">
         <div class="info-title"><span>Some Rules of this Quiz</span></div>
@@ -54,7 +55,7 @@
             <div class="total_que">
                 <!-- Here I've inserted Question Count Number from JavaScript -->
             </div>
-            <button class="next_btn">Next Que</button>
+            <button class="next_btn">Next Question</button>
         </footer>
     </div>
     <!-- Result Box -->
@@ -72,6 +73,7 @@
         </div>
     </div>
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
+    <script src="questions.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
